--- a/minhasReservas.html
+++ b/minhasReservas.html
@@ -20,12 +20,11 @@
             <div class="col-2">
                 <div class="list-group">
                     <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
-                      The current link item
+                      Todos
                     </a>
-                    <a href="#" class="list-group-item list-group-item-action">A second link item</a>
-                    <a href="#" class="list-group-item list-group-item-action">A third link item</a>
-                    <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
-                    <a href="#" class="list-group-item list-group-item-action disabled" tabindex="-1" aria-disabled="true">A disabled link item</a>
+                    <a href="#" class="list-group-item list-group-item-action">Pedidos</a>
+                    <a href="#" class="list-group-item list-group-item-action">Eftuadas</a>
+                    <a href="#" class="list-group-item list-group-item-action">Canceladas</a>
                 </div>
             </div>
             <div class="col-1"></div>
