--- a/atividades.html
+++ b/atividades.html
@@ -13,7 +13,7 @@
 
 <!----Foto Inicial e Titulo-------->
 
-  <section class="fotoinicial">
+  <section id="fotoinicial">
     <div class="container-fluid">
       <div class="row">
 
@@ -69,12 +69,7 @@ vídeos da actividade.
     </p>
 
     <h6 class="titulodesc">Preço por pessoa com transporte incluido:</h6>
-    <p class="programa-preço" id="preco">
-      Preço por pessoa - 40€ <br>
-      mais de 5 participantes - 140€<br>
-      Preço por pessoa com transporte próprio:<br>
-      Preço por pessoa - 30€ <br>
-      mais de 5 participantes - 120€<br>
+    <p class="programa-preço"><span id="preco"></span>€ (por Participante)
     
     </p>
 
@@ -83,7 +78,7 @@ vídeos da actividade.
       Snack - 5€
     </p>
 
-    <button class="btn btn-success px-3">Marque já</button>
+    <button class="btn btn-primary form-btn"><a href="reservas.html" id="linkAtividade">Marque já</a></button>
 
   </div>
   <script src="js/getAtividade.js"></script>
