--- a/reservas.html
+++ b/reservas.html
@@ -203,19 +203,19 @@
           <div class="form-group col-4">
             <label for="atividade">Atividade:</label>
             <div class="dadosConfirm">
-              <p>Rappel</p>
+              <p id="confirmAtividade"></p>
             </div>
           </div>
           <div class="form-group col-4">
             <label for="atividade">Número de Participantes:</label>
             <div class="dadosConfirm">
-              <p>Rappel</p>
+              <p id="confirmParticipantes"></p>
             </div>
           </div>
           <div class="form-group col-4">
             <label for="atividade">Preço:</label>
             <div class="dadosConfirm">
-              <p id="preco">Rappel</p>
+              <p id="confirmPreco"></p>
             </div>
           </div>
         </div>
@@ -223,13 +223,13 @@
           <div class="form-group col-6">
             <label for="atividade">Data Reserva:</label>
             <div class="dadosConfirm">
-              <p>10/05/2002</p>
+              <p id="confirmData"></p>
             </div>
           </div>
           <div class="form-group col-6">
             <label for="atividade">Continuidade:</label>
             <div class="dadosConfirm">
-              <p>Unica</p>
+              <p id="confirmContinuidade"></p>
             </div>
           </div>
         </div>
@@ -237,13 +237,13 @@
           <div class="form-group col-6">
             <label for="atividade">Hora de Inicio:</label>
             <div class="dadosConfirm">
-              <p>05:05</p>
+              <p id="confirmHoraInicio"></p>
             </div>
           </div>
           <div class="form-group col-6">
             <label for="atividade">Hora de Fim:</label>
             <div class="dadosConfirm">
-              <p>05:05</p>
+              <p id="confirmHoraFim"></p>
             </div>
           </div>
         </div>
