--- a/reservas.html
+++ b/reservas.html
@@ -38,7 +38,7 @@
       <div class="alert alert-success" role="alert">
         <h4 class="pb-3">Pedido efetuado com sucesso!</h4>
         <p>O seu pedido de reserva de atividade foi completado com sucesso</p>
-        <p>Pode visualizar o estado e os detalhes do pedido <a href="index.html" class="alert-link">aqui</a>.</p>
+        <p>Pode visualizar o estado e os detalhes do pedido <a href="minhasReservas.html" class="alert-link">aqui</a>.</p>
       </div>
     </div>
 
