--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <!--<li>
                     <a href="https://www.naturimont.com/bicicletas.html">
                         <span class="ico" style="z-index: 99;">
-                            <i class="bi bi-bicycle"></i>
+                            <img src="/imgs/icons/can.png" style="width: 50px; height: 50px;">
                         </span>
                         <span class="info">Rappel</span>
                     </a>
